[package]
name = "handshake"
version = "0.1.0"
edition = "2021"
description = "A simple diffie-hellman handshake implementation for a P2P node"
license = "CC0-1.0"

[lib]
crate-type = ["lib"]

[dependencies]
tokio = { version = "1", features = ["full"] } #features = ["io-util", "net", "parking_lot", "rt", "sync", "time"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = "0.3"
rand = "0.8"
ring = "0.17"
pea2pea = "0.49"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
handshake = { path = "." }